--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.24)
+cmake_minimum_required(VERSION 3.23.2)
 project(Jumper)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Jumper main.cpp)
+add_executable(Jumper main.cpp Entity.cpp Entity.h)
